package homework;

public class Being {
    
}
