package homework;

public class Flagon extends Being{
    public void emitFragrance(){
        System.out.println("The flagon emits a fragrance.");
    }
    public void rollWithNoise(){
        System.out.println("The flagon rolls away and makes some noise.");
    }
}
