package homework;

public class Nail extends Being{
    public void bounce(){
        System.out.println("The nail bounces away");
    }
}
