package homework;

public class SpiderWeb extends Being{
    public void shrink(){
        System.out.println("The spiderweb is shrinking!");
    }
}
